--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.security.user.name=admin
 spring.security.user.password=admin123
 server.port=5123
 
+logging.level.org.springframework.security=DEBUG
