configuracion de docker file y variables de entorno

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,18 @@
+#PRODUCCION
+spring.data.mongodb.uri=${MONGO_URI}
+spring.data.mongodb.database=${MONGO_DATABASE}
+spring.security.user.name=${MONGO_USERNAME}
+spring.security.user.password=${MONGO_PASSWORD}
+server.port=${SERVER_PORT}
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
 
-spring.data.mongodb.uri=mongodb+srv://andresrobert9530:68vCmM0hhmBQj1tl@cluster0.ynrod.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database=shaineDB
-spring.security.user.name=admin
-spring.security.user.password=admin123
-server.port=5123
-
+#DESARROLLO
+#spring.data.mongodb.uri=mongodb+srv://andresrobert9530:68vCmM0hhmBQj1tl@cluster0.ynrod.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+#spring.data.mongodb.database=shaineDB
+#spring.security.user.name=admin
+#spring.security.user.password=admin123
+#server.port=5123
+#jwt.secret=MI_CLAVE_ULTRA_SEGURA_DE_AL_MENOS_32_CARACTERES
+#jwt.expiration=3600000
 logging.level.org.springframework.security=DEBUG
