cambio en el uri mongo

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 SERVER_PORT=5123
 
 # Configuración de MongoDB
-MONGO_URI=mongodb+srv://andresrobert9530:68vCmM0hhmBQj1tl@cluster0.ynrod.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://andresrobert9530:68vCmM0hhmBQj1tl@cluster0.ynrod.mongodb.net/tu_base_de_datos?retryWrites=true&w=majority&tls=true
 MONGO_DATABASE=shaineDB
 MONGO_USERNAME=admin
 MONGO_PASSWORD=admin123
